Grok changes
************

0.11 (unreleased)
=================

Feature changes
---------------

* Removed grok.define_permission in favor of the grok.Permission
  component base class

* Add the grok.Role component base class.

0.10 (2007-08-21)
=================

Feature changes
---------------

* Integrated admin user interface.

* Configuration using Martian (http://pypi.python.org/pypi/martian).

* Flash message infrastructure included.

* Adjust dependencies for Grok so that grokproject should work on
  Windows.

Bug fixes
---------
 
* A fix in Martian where multiple grok.Model or grok.Container classes
  could result in something being found as a context twice.

0.9 series (early 2007 until july 2007)
=======================================

Feature changes
---------------

Grok was released in "continuous release" mode from SVN during this period.

0.1 series (september 2006 until early 2007)
============================================

Feature changes
---------------

Grok was created in september 2006.