@@ -12,6 +12,14 @@ Feature changes
 
 * Add the grok.Role component base class.
 
+Restructuring
+-------------
+
+* The <grok:grok /> ZCML directive now emits a configuration action
+  instead of grokking right away at XML parsing time.  That way
+  grokkers can depend on components that are set up using regular ZCML
+  (e.g. checking for a permission that's defined in ZCML).
+
 0.10 (2007-08-21)
 =================
 
